@@ -1,3 +1,4 @@
+#include <stdlib.h>	
 #include <stream.h>
 #include <qfileinf.h>
 #include <qchkbox.h>
@@ -13,13 +14,13 @@
 #include <kfontdialog.h>
 #include <kcolorbtn.h>
 
+
 /********************************************************************
  * Configuration objects
  */
 KConfigObject::KConfigObject(void* pData, bool pDeleteData, const char* key)
 {
-  group = 0L;
-  data  = pData;
+  group = 0L;  data  = pData;
   deleteData = pDeleteData;
   keys.setAutoDelete(TRUE);
   if(key) keys.append(key);
@@ -29,9 +30,15 @@ KConfigObject::~KConfigObject()
 {
   if(deleteData) delete data;
 }
-/**
-   regexp matched keys Config Object
-*/
+
+
+
+
+
+
+/*********************************************************************
+ * regexp matched keys Config Object
+ */
 KConfigMatchKeysObject::KConfigMatchKeysObject(const QRegExp& match,
 					       QStrList& list)
   :KConfigObject(&list, FALSE), regexp(match)
@@ -42,7 +49,7 @@ void KConfigMatchKeysObject::readObject(KObjectConfig* config)
   QStrList &list = *((QStrList*)data);
   list.clear();
   keys.clear();
-  KEntryIterator* it = config->entryIterator(config->group());
+  KEntryIterator* it = config->getConfig()->entryIterator(config->group());
   if(it) {
     for(it->toFirst(); it->current(); ++(*it)) {
       if(regexp.match(it->currentKey()) != -1)
@@ -57,7 +64,7 @@ void KConfigMatchKeysObject::writeObject(KObjectConfig* config)
 {
   QStrList &list = *((QStrList*)data);
   unsigned i;for(i=0; i<keys.count(); i++)
-    config->writeEntry(keys.at(i), list.at(i));
+    config->getConfig()->writeEntry(keys.at(i), list.at(i));
 }
 QStrList KConfigMatchKeysObject::separate(const char* s, char sep=',')
 {
@@ -69,7 +76,12 @@ QStrList KConfigMatchKeysObject::separate(const char* s, char sep=',')
   if(!last.isNull() && last != "") list.append(last);
   return list;
 }
-/*
+
+
+
+
+
+/**********************************************************************
  * numbered keys Config Object
  */
 KConfigNumberedKeysObject::KConfigNumberedKeysObject(const char* pKeybase,
@@ -88,7 +100,7 @@ void KConfigNumberedKeysObject::readObject(KObjectConfig* config)
   unsigned i;for(i=from; i<to; i++) {
     QString num;
     QString key = keybase + num.setNum(i);
-    QString entry = config->readEntry(key);
+    QString entry = config->getConfig()->readEntry(key);
     if(entry.isNull() || entry == "") break;
     keys.append(key);
     list.append(entry);
@@ -100,25 +112,24 @@ void KConfigNumberedKeysObject::writeObject(KObjectConfig* config)
   unsigned i;for(i=0; i<=list.count(); i++) {
     QString num;
     QString key = keybase + num.setNum(i);
-    config->writeEntry(key, i>=list.count()?"":list.at(i));
+    config->getConfig()->writeEntry(key, i>=list.count()?"":list.at(i));
   }
 }
-/*
+
+
+
+
+
+/**********************************************************************
  * Bool Object
  */
 void KConfigBoolObject::readObject(KObjectConfig* config)
 {
-  QString entry = config->readEntry(keys.current());
-  if(!entry.isNull()) {
-    entry.lower(); entry.stripWhiteSpace();
-    *((bool*)data) = (entry == "yes" | entry == "true"
-		      | entry == klocale->translate("yes") 
-		      | entry == klocale->translate("true"))?TRUE:FALSE;
-  }
+  *((bool*)data) = config->getConfig()->readBoolEntry(keys.current(), *((bool*)data));
 }
 void KConfigBoolObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), (*((bool*)data))?"yes":"no");
+  config->getConfig()->writeEntry(keys.current(), *((bool*)data));
 }
 void KConfigBoolObject::toggled(bool val)
 {
@@ -132,40 +143,60 @@ QWidget* KConfigBoolObject::createWidget(QWidget* parent, const char* label)
   connect(box, SIGNAL(toggled(bool)), SLOT(toggled(bool)));
   return box;
 }
-/*
+
+
+
+
+
+/***************************************************************************
  * Int Object
  */
 void KConfigIntObject::readObject(KObjectConfig* config)
 {
-  *((int*)data) = config->readNumEntry(keys.current(), *((int*)data));
+  *((int*)data) = config->getConfig()->readNumEntry(keys.current(), *((int*)data));
 }
 void KConfigIntObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), *((int*)data));
+  config->getConfig()->writeEntry(keys.current(), *((int*)data));
 }
-/*
+
+
+
+
+
+/*****************************************************************************
  * String Object
  */
 void KConfigStringObject::readObject(KObjectConfig* config)
 {
-  *((QString*)data) = config->readEntry(keys.current(), *((QString*)data));
+  *((QString*)data) = config->getConfig()->readEntry(keys.current(), *((QString*)data));
 }
 void KConfigStringObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), *((QString*)data));
+  config->getConfig()->writeEntry(keys.current(), *((QString*)data));
 }
-/*
+
+
+
+
+
+/******************************************************************************
  * String List Object
  */
 void KConfigStrListObject::readObject(KObjectConfig* config)
 {
-  config->readListEntry(keys.current(), *((QStrList*)data), sep);
+  config->getConfig()->readListEntry(keys.current(), *((QStrList*)data), sep);
 }
 void KConfigStrListObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), *((QStrList*)data), sep);
+  config->getConfig()->writeEntry(keys.current(), *((QStrList*)data), sep);
 }
-/*
+
+
+
+
+
+/******************************************************************************
  * Combo Object
  */
 KConfigComboObject::KConfigComboObject(const char* key, QString& val,
@@ -207,22 +238,25 @@ QWidget* KConfigComboObject::createWidget2(QWidget* parent,
   connect(box, SIGNAL(clicked(int)), SLOT(activated(int)));
   return box;
 }
-/*
+
+
+
+
+
+/***********************************************************************
  * Color List Object
  */
 void KConfigColorObject::readObject(KObjectConfig* config)
 {
-  *((QColor*)data) = config->readColorEntry(keys.current(),
-					    ((QColor*)data));
+  *((QColor*)data) = config->getConfig()->readColorEntry(keys.current(), ((QColor*)data));
 }
 void KConfigColorObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), *((QColor*)data));
+  config->getConfig()->writeEntry(keys.current(), *((QColor*)data));
 }
 QWidget* KConfigColorObject::createWidget(QWidget* parent)
 {
-  KColorButton *button = new KColorButton(*((const QColor*)data),
-					  parent);
+  KColorButton *button = new KColorButton(*((const QColor*)data), parent);
   connect(button, SIGNAL(changed(const QColor&)),
 	  SLOT(changed(const QColor&)));
   return button;
@@ -231,17 +265,21 @@ void KConfigColorObject::changed(const QColor& newColor)
 {
   *((QColor*)data) = newColor;
 }
-/*
+
+
+
+
+
+/*************************************************************************
  * Font Object
  */
 void KConfigFontObject::readObject(KObjectConfig* config)
 {
-  *((QFont*)data) = config->readFontEntry(keys.current(),
-					  ((QFont*)data));
+  *((QFont*)data) = config->getConfig()->readFontEntry(keys.current(), ((QFont*)data));
 }
 void KConfigFontObject::writeObject(KObjectConfig* config)
 {
-  config->writeEntry(keys.current(), *((QFont*)data));
+  config->getConfig()->writeEntry(keys.current(), *((QFont*)data));
 }
 QWidget* KConfigFontObject::createWidget(QWidget* parent)
 {
@@ -264,21 +302,97 @@ void KConfigFontObject::activated()
    
 
 **************************************************************************/
-KObjectConfig::KObjectConfig(const char* pGlobalFile, const char* pLocalFile)
-  :KConfig(pGlobalFile, pLocalFile)
+KObjectConfig::KObjectConfig(KConfigBase* config, bool autoDelete)
+{
+  init();
+  deleteConfig = autoDelete;
+  config = config;
+  configFile = 0L;
+  configType = External;
+}
+KObjectConfig::KObjectConfig(int type, const char* name)
+{
+  init();
+  configType   = type;
+  configFile   = name;
+}
+KObjectConfig::~KObjectConfig()
+{
+  if(deleteConfig && config) delete config;
+}
+void KObjectConfig::init()
 {
   groups.setAutoDelete(TRUE);
   entries.setAutoDelete(TRUE);
-
-  QFileInfo info(pLocalFile);
-  emptyLocal = (!info.exists() || (info.size() == 0));
+  config = 0L;
 }
+
+
+bool nonzeroFile(QString& file) {
+    QFileInfo info(file);
+    return info.exists() && (info.size() > 0);
+}
+void KObjectConfig::initConfig()
+{
+  bool readOnly = FALSE;
+  if(config == 0L && configType != External) {
+    QString file;
+    switch(configType) {
+      case AppRc :
+	configFile = kapp->localconfigdir() + "/" + kapp->appName() + "rc";
+	if(!nonzeroFile(configFile)) {
+	  emit noUserRcFile(configFile);
+	  file = kapp->kde_configdir() + "/" + kapp->appName() + "rc";
+	  if(nonzeroFile(file)) configFile = file; else emit noSystemRcFile(file);
+	}
+	break;
+      case UserFromSystemRc :
+	configFile = kapp->localconfigdir() + "/" + kapp->appName() + "rc";
+	if(!nonzeroFile(configFile)) {
+	  file = kapp->kde_configdir() + "/" + kapp->appName() + "rc";
+	  if(nonzeroFile(file)) {
+	    //--- system file exists, reading
+	    config = new KSimpleConfig(file);
+	    loadConfig();
+	    delete config;
+	  }
+	  //--- save new one
+	  config = new KSimpleConfig(configFile);
+	  saveConfig();
+	  emit newUserRcFile();
+	}
+	break;
+      case AppData :
+        file = configFile;
+	configFile = kapp->localkdedir() + "/share/apps/" + kapp->appName() + "/" + file;
+	if(!QFile::exists(configFile)) {
+	  emit noUserDataFile(configFile);
+	  file = kapp->kde_datadir() + "/" + kapp->appName() + "/" + file;
+	  QFileInfo info(file);
+	  if(info.isFile()) {
+	    configFile = file;
+	    readOnly = ! info.isWritable();
+	  } else emit noSystemDataFile(file);
+	}
+	break;    
+      case File : break;
+      default : ASSERT("KObjectConfig: bad type in constructor");
+    }
+    if(config == 0L) config = new KSimpleConfig(configFile, readOnly);
+    deleteConfig = TRUE;
+  }
+}
+
 /*
  * set current configuration group
  */
 void KObjectConfig::setGroup(const char* pGroup)
 {
   if(groups.find(pGroup) == -1) groups.append(pGroup);
+}
+const char* KObjectConfig::group()
+{
+  return groups.current();
 }
 void KObjectConfig::registerObject(KConfigObject* obj)
 {
@@ -287,27 +401,25 @@ void KObjectConfig::registerObject(KConfigObject* obj)
 }
 void KObjectConfig::loadConfig()
 {
+  initConfig();
   unsigned i;for(i=0; i<groups.count(); i++) {
-    KConfig::setGroup(groups.at(i));
+    config->setGroup(groups.at(i));
     unsigned j;for(j=0; j<entries.count(); j++)
       if(groups.at(i) == entries.at(j)->group) {
 	entries.at(j)->readObject(this);
       }
   }
-  if(emptyLocal) {
-    emptyLocal = FALSE;
-    emptyLocalConfig();
-  }
 }
 void KObjectConfig::saveConfig()
 {
+  initConfig();
   unsigned i;for(i=0; i<groups.count(); i++) {
-    KConfig::setGroup(groups.at(i));
+    config->setGroup(groups.at(i));
     unsigned j;for(j=0; j<entries.count(); j++)
       if(groups.at(i) == entries.at(j)->group)
 	entries.at(j)->writeObject(this);
   }
-  sync();
+  config->sync();
 }
 KConfigObject* KObjectConfig::find(void* data)
 {
@@ -385,3 +497,4 @@ QWidget* KObjectConfig::createFontWidget(QFont& val, QWidget* parent)
     return ((KConfigFontObject*)obj)->createWidget(parent);
   return 0L;
 }
+
